--- a/scss/user.scss
+++ b/scss/user.scss
@@ -1250,6 +1250,7 @@
 
 .certificate-asset-upload {
     margin-bottom: 1.5rem;
+
     h5 {
         color: var(--gray-900, #101828);
         font-size: 1.125rem;
@@ -1259,7 +1260,7 @@
         margin-bottom: 1rem;
     }
 
-    img{
+    img {
         margin-bottom: 1rem;
     }
 
@@ -1272,19 +1273,19 @@
         flex-direction: column;
         align-items: center;
         color: #5E6B80;
-        text-align: center; 
+        text-align: center;
         font-size: 0.75rem;
         font-style: normal;
         font-weight: 400;
-        line-height: 1.125rem; 
-        
-        span{
+        line-height: 1.125rem;
+
+        span {
             color: #294CFF;
         }
     }
 }
 
-.create-certificate-form-2 { 
+.create-certificate-form-2 {
     .form-group {
         position: relative;
         margin-top: 1.5rem;
@@ -1309,15 +1310,15 @@
             transition: all .15s ease-in-out;
             background-color: #fff;
         }
-    
-    
-    
+
+
+
         .form-control:hover,
         .form-control:focus {
             border: 1px solid #294CFF;
         }
-    
-    
+
+
         .form-control:valid+label,
         .form-control:focus+label {
             top: -6px;
@@ -1327,7 +1328,7 @@
             font-weight: 400;
             line-height: 0.75rem;
         }
-    } 
+    }
 
     .form-control {
         position: relative;
@@ -1343,9 +1344,341 @@
         padding: 1rem 0.875rem;
         border-radius: 0.5rem;
         border: 1px solid var(--components-input-outlined, rgba(145, 158, 171, 0.32));
-    }  
-     
+    }
+
 }
+
+.account-settings-box {
+    background-color: transparent !important;
+    border: 0 !important;
+    box-shadow: none !important;
+
+    .header {
+        background: #FFF;
+        border-radius: 0.5rem 0.5rem 0 0;
+        border: 1px solid rgba(16, 28, 45, 0.10);
+    }
+
+    .tab-pane.active-bg {
+        background: #FFF;
+        border-radius: 0 0 0.5rem 0.5rem;
+        border: 1px solid rgba(16, 28, 45, 0.10);
+        border-top: 0;
+    }
+
+    .profile-text-box-2 {
+        border-radius: 0 0 0.5rem 0.5rem !important;
+        border: 1px solid rgba(16, 28, 45, 0.10) !important;
+        border-top: 0 !important;
+    }
+}
+
+.theme-dns-settings-box {
+    border: 0 !important;
+    padding: 0 !important;
+    box-shadow: none !important;
+    margin-top: 3rem !important;
+}
+
+.login-page-theme-box {
+    border-radius: 0.5rem !important;
+    border: 1px solid var(--neutral-color-neutral-30, #E5ECF6) !important;
+    background: #FFF !important;
+    padding: 1.5rem !important;
+
+    .media {
+        img {
+            width: 10rem !important;
+            height: 6.25rem !important;
+        }
+    }
+
+    .file-upload-2 {
+        width: 10rem !important;
+        height: 6.25rem !important;
+        border-radius: 0.5rem !important;
+        border: 1px dashed var(--neutral-color-neutral-40, #C5CCD8) !important;
+        background: #FFF !important;
+        box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16) !important;
+        margin-right: 1.5rem !important;
+        margin-top: 0rem !important;
+
+        img {
+            width: 1.625rem !important;
+            height: 1.625rem !important;
+        }
+    }
+}
+
+.dns-settings-box-wrapper {
+    background: #FFF;
+    display: grid;
+    grid-template-columns: 22% 78%;
+}
+
+.dns-left-sidebar {
+    border-right: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
+    padding: 3.75rem 2.5rem 2rem 2rem;
+
+    .setup-step {
+        .step-box {
+            @include m.df;
+            padding-bottom: 1.62rem;
+            position: relative;
+
+            &:before {
+                position: absolute;
+                content: "";
+                left: 5.5px;
+                bottom: -6px;
+                width: 0.125rem;
+                height: 73%;
+                background-color: #E4E7EC;
+            }
+
+            span {
+                display: inline-block;
+                width: .9rem;
+                height: .9rem;
+                border-radius: 50%;
+                border: 4px solid #E5ECF6;
+                outline: #E5ECF6 solid 2px;
+                ;
+            }
+
+            p {
+                margin-left: 1.5rem;
+                color: var(--neutral-color-neutral-70, #2F3A4C);
+                font-size: 1rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 1.5rem;
+            }
+        }
+
+        .step-box.big {
+            &:before {
+                height: 57%;
+            }
+
+            span {
+                width: 1.5rem;
+                height: 1.5rem;
+                border: 7px solid #E5ECF6;
+                outline: #E5ECF6 solid 3px;
+                margin-left: -.3rem;
+            }
+
+            p {
+                color: var(--neutral-color-neutral-80, #1C2636);
+                font-size: 1.125rem;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 1.5rem;
+            }
+        }
+
+        .step-box.active {
+            &:before {
+                background-color: #294CFF;
+            }
+
+            span {
+                border-color: #294CFF;
+            }
+
+            p {
+                color: #294CFF;
+            }
+        }
+
+        .step-box.done {
+            span {
+                border-width: 0;
+                background: #294CFF;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+            }
+        }
+
+        .step-box.current {
+            span {
+                border-color: #294CFF;
+            }
+
+            p {
+                font-weight: 500;
+            }
+        }
+
+        .step-box {
+            &:last-child {
+                &:before {
+                    height: 0;
+                    width: 0;
+                }
+            }
+
+        }
+    }
+}
+
+.dns-main-body {
+    padding: 3.75rem 2rem 2.5rem;
+
+    .add-domain-box {
+
+        h2,
+        h1 {
+            color: var(--neutral-90, #252525);
+            font-family: Inter;
+            font-size: 1.875rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 2.375rem;
+            margin-bottom: 0.75rem;
+        }
+
+        p {
+            overflow: hidden;
+            color: var(--neutral-color-neutral-70, #2F3A4C);
+            text-overflow: ellipsis;
+            font-size: 0.875rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 1.25rem;
+        }
+
+        h5 {
+            color: var(--neutral-90, #252525);
+            font-size: 1.125rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 135%;
+            margin-top: 1.5rem;
+            margin-bottom: 0.75rem;
+        }
+
+        .form-group {
+            width: 50%;
+        }
+
+        .form-control {
+            border-radius: 0.375rem;
+            border: 1px solid var(--primary-color-blue-light, #3D5CFF);
+            background: #F9FBFF;
+            padding: 1rem 0.75rem;
+            box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16);
+            overflow: hidden;
+            color: var(--neutral-color-neutral-70, #2F3A4C);
+            text-overflow: ellipsis;
+            font-size: 1rem;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 1.25rem;
+        }
+
+        .form-submit-bttns {
+            margin-top: 2rem;
+            text-align: left;
+
+            .btn {
+                font-size: 1rem !important;
+                font-weight: 500 !important;
+            }
+        }
+    }
+
+    .domain-verify-box {
+        h3 {
+            overflow: hidden;
+            color: var(--neutral-color-neutral-70, #2F3A4C);
+            text-overflow: ellipsis;
+            font-size: 1rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 1.25rem;
+            margin-bottom: 0.6rem;
+        }
+
+        .form-check {
+            margin-top: 1.5rem;
+
+            label {
+                color: var(--neutral-color-neutral-80, #1C2636);
+                font-size: 1.125rem;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 135%;
+            }
+
+            h6 {
+                color: var(--neutral-color-neutral-70, #2F3A4C);
+                font-size: 1rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 135%;
+                margin-top: 0.6rem;
+            }
+        }
+
+        .media {
+            align-items: center; 
+
+            h5 {
+                color: var(--neutral-color-neutral-70, #2F3A4C);
+                font-size: 1rem;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 135%;
+            }
+
+            h6 {
+                color: var(--neutral-color-neutral-70, #2F3A4C);
+                font-size: 0.875rem;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 135%;
+            }
+        }
+
+        .nav {
+            margin-top: 2.75rem;
+            border: 0;
+
+            .nav-link {
+                color: var(--text-light-secondary, #637381) !important;
+                font-size: 1rem !important;
+                font-style: normal !important;
+                font-weight: 500 !important;
+                line-height: 1.375rem !important;
+                border: 0 !important;
+            }
+
+            .nav-link.active {
+                border: 0 !important;
+                color: #212B36 !important;
+                border-bottom: 2.5px solid #294CFF !important;
+            }
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
